changes home 31/07